--- a/embeddings/mainwindow.ui
+++ b/embeddings/mainwindow.ui
@@ -60,7 +60,7 @@
      </font>
     </property>
     <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
     </property>
     <property name="styleSheet">
      <string notr="true">QWidget #Application {
@@ -68,7 +68,7 @@ rgb(0, 0, 0)
 }</string>
     </property>
     <property name="currentIndex">
-     <number>5</number>
+     <number>8</number>
     </property>
     <widget class="QWidget" name="Start">
      <property name="autoFillBackground">
@@ -662,7 +662,7 @@ font: 900 12pt &quot;Segoe UI Black&quot;;</string>
      </property>
      <layout class="QGridLayout" name="gridLayout" columnstretch="0">
       <property name="sizeConstraint">
-       <enum>QLayout::SetNoConstraint</enum>
+       <enum>QLayout::SizeConstraint::SetNoConstraint</enum>
       </property>
       <property name="leftMargin">
        <number>10</number>
@@ -692,7 +692,7 @@ font: 900 12pt &quot;Segoe UI Black&quot;;</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
           <property name="sizeConstraint">
-           <enum>QLayout::SetDefaultConstraint</enum>
+           <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
           </property>
           <property name="spacing">
            <number>5</number>
